# Proyecto-Final-Fundamentos-de-Ingenieria-de-Software

icard/: pyproject.toml
icard/icard/: settings.py  urls.py
icard_react/: package.json
icard_react/src/: App.js
icard_react/src/layouts/AdminLayout/: AdminLayout.js
icard_react/src/pages/: Error404.js
icard_react/src/pages/Admin/: LoginAdmin.js
icard_react/src/routes/: Navigation.js  routes.admin.js  routes.client.js
infrastructure_icard/: docker-compose.yaml
